# runtime-anim

./: CMakeLists.txt  README.md
src/: anim_keys_samples_clips.cpp  anim_keys_samples_clips.hpp  quat_benchmark.cpp  skeleton.cpp
src/blend/: blend.cpp  blend.hpp  main.cpp
src/motion_matching/: main.cpp  motion_matching.cpp  motion_matching.hpp
tests/: CMakeLists.txt  test_clip.cpp
